--- a/src/app/components/skeleton.css
+++ b/src/app/components/skeleton.css
@@ -30,11 +30,10 @@
 	}
 }
 .noise-wrapper {
-  width: 100vw;
-	height: 100dvh;
-	position: fixed;
-	left: 0;
-	top: 0;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100dvh;
 	pointer-events: none;
 	opacity: 1;
 	overflow: hidden;
@@ -59,10 +58,9 @@
 
 .scanlines {
 	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100vw;
-	height: 100vh;
+	inset: 0;
+	width: 100%;
+	height: 100dvh;
 	pointer-events: none;
 	z-index: 300;
 	opacity: .4;
@@ -107,14 +105,22 @@ to {
 		  }
 	}
 
-	.noise {
+	.noise-layers {
 		position: fixed;
+		inset: 0;
+		overflow: hidden;
+		pointer-events: none;
+		z-index: 0;
+	}
+
+	.noise {
+		position: absolute;
 		top: -50%;
 		left: -50%;
 		right: -50%;
 		bottom: -50%;
 		width: 200%;
-		height: 200vh;
+		height: 200%;
 		background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
 		background-repeat: repeat;
 		animation: noise-animation .2s infinite;
